Fix for bug #11708 (real function returns wrongly rounded decimal)